<resources>
    <string name="app_name">Magarine</string>
    <string name="magarine">Magarine</string>

    <!--common-->
    <string name="no">아니요</string>
    <string name="yes">네</string>
    <string name="close">닫기</string>

    <!--logout-->
    <string name="logout">로그아웃</string>
    <string name="do_you_want_logout">로그아웃 하시겠습니까?</string>
    <string name="logout_toast">로그아웃 되었습니다</string>

    <!--activity_login-->
    <string name="find_mart_info_around_you">내 주변 마트의 할인정보, 놓치지 마세요.</string>
    <string name="you_cannot_signup_without_agreement">약관에 동의하셔야 가입 가능합니다.</string>
    <string name="login_success">%s님 반갑습니다.</string>

    <!--activity_guide-->
    <string name="btn_get_address">주소 검색</string>
    <string name="write_search_address">주소를 입력해주세요</string>
    <string name="no_address">일치하는 주소가 없습니다.</string>
    <string name="network_error">통신실패</string>
    <string name="intro_guide">%s님, 반갑습니다.\n어느 지역의 마트 정보를\n알려드릴까요?</string>
    <string name="btn_current_position">현 위치로 주소 설정</string>

    <!--activity_guide-->
    <string name="permission_title">권한 요청</string>
    <string name="permission_content">제공하는 서비스를 원할하게 이용하시려면 권한 승인이 필요합니다.</string>

    <!--activity_location-->
    <string name="location_hint">주소를 입력해주세요.</string>
    <string name="location_now">현 위치로 주소 설정</string>

    <!--activity_product-->
    <string name="product_detail">상품 상세</string>
    <string name="product_info">상품 정보</string>
    <string name="add_to_cart_memo">장보기 메모에 추가</string>
    <string name="choose_number_of_product">상품 수량을 선택하세요</string>
    <string name="faile_add_product_to_cart">다시 시도해주세요.</string>

    <!--activity_leaflet-->
    <string name="leaflet_title">전단지 정보</string>

    <!--activity_cart-->
    <string name="cart_title">장보기 메모</string>
    <string name="total_price">총 상품금액</string>
    <string name="total_sale_price">총 할인금액</string>
    <string name="total_payment">총 결제예상금액</string>
    <string name="delete_selected_item">삭제</string>
    <string name="purchase_complete">구매완료</string>
    <string name="no_cart">메모가 비어 있어요!</string>
    <string name="go_to_shopping">장보러 가기</string>
    <string name="delete_complete">삭제완료</string>

    <!--activity_cart_history-->
    <string name="cart_history_title">장보기 메모 내역</string>
    <string name="no_cart_history">이번 달엔 메모가 없네요!</string>

    <!--activity_notification-->
    <string name="notification">알림</string>
    <string name="no_notification_history">알림 내역이 없습니다.</string>

    <!--activity_notification_setting-->
    <string name="set_sale_notification">할인 알람 설정</string>
    <string name="let_me_know_notification">할인 알림을 받고 싶은\n품목을 알려주세요!</string>
    <string name="notification_input_hint">품목 이름 (최대 15자)</string>
    <string name="add_notification">품목 추가하기</string>
    <string name="my_notification_list">알림 설정한 항목</string>
    <string name="please_write_the_notification_name">품목 이름을 입력해주세요.</string>
    <string name="already_has_notification">이미 등록된 알림입니다.</string>
    <string name="success_to_delete_notification">삭제되었습니다.</string>
    <string name="success_to_add_notification">추가되었습니다.</string>
    <string name="no_notification">알림을 추가해주세요.</string>

    <!--alert_agree_with_terms-->
    <string name="please_agree_with_terms">이용약관에 동의해 주세요.</string>
    <string name="agree_with_all_terms">모두 동의합니다</string>
    <string name="agree_with_service_terms">[필수] 서비스 이용약관 동의</string>
    <string name="agree_with_collecting_personal_info">[필수] 개인정보 수집 및이용 동의</string>
    <string name="agree_with_event_and_marketing">[선택] 이벤트 및 마케팅 활용 동의</string>
    <string name="agree_and_keep_going">동의하고 계속 진행합니다</string>

    <!--alert_check_cart-->
    <string name="check_cart_message">선택한 상품을 장보기 메모에\n추가했습니다.</string>
    <string name="go_to_cart">장보기 메모로</string>

    <!--fragment_home-->
    <string name="home_title">%s님,\n즐거운 장보기 되세요.</string>
    <string name="cart_description">장보기 메모</string>
    <string name="oops">Oops…</string>
    <string name="no_marts">단골 마트가\n없네요!</string>
    <string name="go_to_add_mart">추가하러 가기</string>

    <!--fragment_search-->
    <string name="search_hint">검색어를 입력해주세요</string>

    <!--fragment_map-->
    <string name="check_result">마트 선택 완료</string>

    <!--fragment profile-->
    <string name="mart_memo">장보기 메모 내역</string>
    <string name="discount_alert">할인 알림 설정</string>
    <string name="personal_inquiry">1:1 문의</string>

    <!--item_product-->
    <string name="product_desc">우리 동네\n인기상품이에요!</string>

    <!--item_category-->
    <string name="no_mart_or_product">찾는 상품/마트가 없습니다</string>
    
    <!--item_cart-->
    <string name="no_mart_in_favorite_mart_list">단골 등록해제한 마트입니다.</string>

    <!--FCM-->
    <string name="noti_title">\'%s\' 할인 상품이 떴어요!</string>
    <string name="noti_body">%s로 사러 가 볼까요?</string>

    <!--menu-->
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_search_hint">검색어를 입력하세요</string>
    <string name="menu_mart">내 단골마트</string>
    <string name="menu_profile">마이페이지</string>
    <string name="menu_cart">장보기 메모</string>
    <string name="menu_delete">삭제</string>

    <!--mart menu-->
    <string name="menu_leaflet">전단지 보기</string>
    <string name="menu_location">마트 위치 보기</string>
    <string name="menu_deleted">삭제</string>

</resources>
