<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="248dp"
        android:layout_height="176dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="10sp"
            android:text="@string/check_cart_message"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/b_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_no"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/b_yes"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/b_yes"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:background="@android:color/transparent"
            android:text="@string/yes"
            app:layout_constraintBottom_toBottomOf="@id/b_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/b_no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>