<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="notificationViewModel"
            type="kr.co.express9.client.mvvm.viewModel.NotificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:lineSpacingExtra="12sp"
                    android:text="@string/let_me_know_notification"
                    android:textColor="#50585d"
                    android:textSize="24sp"
                    tools:text="할인 알림을 받고 싶은\n품목을 알려주세요!" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_round_box_90969f"
                    android:hint="@string/notification_input_hint"
                    android:lineSpacingExtra="-2sp"
                    android:maxLength="15"
                    android:paddingStart="16dp"
                    android:paddingEnd="16sp"
                    android:text="@={notificationViewModel.itemName}"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/b_add_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/shape_round_box_90969f"
                    android:backgroundTint="#90969f"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/add_notification"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginTop="28dp"
                    android:background="#f6f6f6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/my_notification_list"
                        android:textColor="#50585d"
                        android:textSize="14sp"
                        tools:text="알림 설정한 항목" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="0sp"
                        android:textColor="#50585d"
                        android:textSize="14sp"
                        tools:text="5개" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#50585d14" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_hight"
            android:background="@color/white"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:elevation="4dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/set_sale_notification"
                android:textColor="#3c3c3c"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>