<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="productAdapter"
            type="kr.co.express9.client.adapter.ProductAdapter" />

        <variable
            name="homeViewModel"
            type="kr.co.express9.client.mvvm.viewModel.HomeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap">

            <Button
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@color/black" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:visibility="@{homeViewModel.isMarts}"
                    app:bind_adapter="@{productAdapter}"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:spanCount="2" />

                <LinearLayout
                    android:id="@+id/ll_oops_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:visibility="@{!homeViewModel.isMarts}">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="17dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#f6f6f6"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="69dp"
                                android:fontFamily="sans-serif"
                                android:gravity="center_horizontal"
                                android:text="@string/oops"
                                android:textColor="#b0b0b0"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:fontFamily="sans-serif"
                                android:gravity="center_horizontal"
                                android:lineSpacingExtra="4sp"
                                android:text="@string/no_marts"
                                android:textColor="#b0b0b0"
                                android:textSize="16sp"
                                android:textStyle="normal" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:src="@drawable/ic_invalid_name_26dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="10dp"
                                android:fontFamily="sans-serif"
                                android:gravity="center_horizontal"
                                android:lineSpacingExtra="6sp"
                                android:text="@string/go_to_add_mart"
                                android:textColor="#b0b0b0"
                                android:textSize="14sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/product_desc"
                        android:textColor="#3c3c3c"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>